--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,6 +9,7 @@
     color: #ffffff;
     font-size: 18px;
     padding: 40px;
+    margin-left: 30px;
   }
 
   &__info {
@@ -18,6 +19,8 @@
     align-items: center;
     padding: 20px;
     padding-right: 30px;
+    list-style-type: none;
+ 
   }
 
   &__github {
@@ -49,11 +52,11 @@
   }
 
   &__icons {
-    height: 15px;
+    height: 18px;
   }
 
   &__icon-cv {
-    height: 12px;
+    height: 13px;
   }
 }
 
