--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,5 @@
 .home {
-  height: 500px;
+  height: 635px;
   width: 98vw;
   background: #E5E5E5;
 
@@ -13,6 +13,7 @@
   &__intro {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 20px;
   }
 
@@ -24,8 +25,8 @@
 
   &__icon {
     padding-left: 20px;
-    height: 15px;
-    width: 15px;
+    height: 25px;
+    width: 25px;
   }
 
 //   &__heading {
@@ -57,9 +58,15 @@
     width: 230px;
     margin: 20px;
     border: 2px solid #272643;
-    box-shadow: 0px 20px 40px rgba(185, 192, 192, 0.19);
+    // box-shadow: 0px 20px 40px rgba(185, 192, 192, 0.19);
     border-radius: 7px;
     background: #BAE8E8;
+    box-shadow: 5px 5px #272643;
+    
+  }
+
+  &__styling{
+    text-decoration: none;
   }
   &__arrow-icon{
     height: 15px;
