--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -6,6 +6,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 120px;
+
 
   &__title {
     font-weight: 600;
@@ -43,7 +45,8 @@
 
   &__description {
     width: 600px;
-    padding: 20px;
+    // padding: 40px;
+    margin: 40px;
     font-size: medium;
     text-align: center;
     color: #8c9cb1;
