--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,8 @@
 .home {
   height: 635px;
   width: 98vw;
-  background: #E5E5E5;
+  // background: #E5E5E5;
+  background: #F7FAFA;
 
 
 //   background: #F7FAFA;
